--- a/src/CardManager.Api/CardManager.Api.csproj
+++ b/src/CardManager.Api/CardManager.Api.csproj
@@ -1,13 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CardManager.Domain\CardManager.Domain.csproj" />
+    <ProjectReference Include="..\CardManager.Infrastructure\CardManager.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
