Add more tests and logic

--- a/.editorconfig
+++ b/.editorconfig
@@ -58,7 +58,7 @@ csharp_style_expression_bodied_indexers = when_on_single_line:error
 csharp_style_expression_bodied_accessors = when_on_single_line:error
 csharp_style_expression_bodied_lambdas = when_on_single_line:error
 csharp_style_expression_bodied_local_functions = when_on_single_line:error
-csharp_style_expression_bodied_methods = true:error
+csharp_style_expression_bodied_methods = false:error
 csharp_style_expression_bodied_operators = when_on_single_line:error
 
 # Pattern matching
